<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:id="@+id/slider_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/comfort_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfort_label"
            android:layout_gravity="center"
            android:textSize="16sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/comfort_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            android:stepSize="1.0"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/from_station_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_medium_circle" />

                <TextView
                    android:id="@+id/from_station"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/from"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/from_station_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:padding="6dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/to_station_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_location_pin" />

                <TextView
                    android:id="@+id/to_station"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/to"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/to_station_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="6dp"
                    android:padding="6dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_close" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/swap_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_corner_background"
            android:padding="6dp"
            android:src="@drawable/ic_swap_vertical" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/suggested_routes_recycler_view"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:id="@+id/route_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:textSize="14sp"
        android:textColor="@color/black_green"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/open_detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/open_route_detail_button_background"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/open_route_detail"
        android:textColor="@color/turquoise"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:visibility="gone"/>
</LinearLayout>
